# ArchiveOS

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  FEATURE_REQUEST.md  config.yml
archiveos/: __init__.py  cli.py  config.py  pipeline.py  types.py
archiveos/catalog/: db.py
archiveos/catalog/migrations/: 001_initial.sql  002_imports_columns.sql
archiveos/duplicates/: stage.py
archiveos/importer/: base.py  filesystem.py  registry.py  scan.py  sony_a6700.py
archiveos/metadata/: exiftool_provider.py  providers.py
archiveos/organizer/: paths.py
archiveos/reports/: writer.py
archiveos/storage/: layout.py
archiveos/verifier/: hashutil.py
config/: archiveos.example.json
docs/: ARCHITECTURE.md  DESIGN_PHILOSOPHY.md  ENGINEERING_RULES.md  ROADMAP.md  VISION.md  architecture.md  backlog.md  product.md
docs/adr/: ADR-001-sqlite-over-postgresql.md  ADR-002-sha256-verification.md  ADR-003-exif-primary-capture-date.md  ADR-004-import-manifests-immutable.md  ADR-005-original-media-never-modified.md
tests/: README.md  test_catalog_migrations.py  test_config.py  test_duplicates.py  test_importer_registry.py  test_integration_pipeline.py
